After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707091 - Fix the margin of the toolbar
Fix the margin of the toolbar
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-29 22:48 UTC by Yosef Or Boczko
Modified: 2013-08-31 17:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-toolbar: Fix the margin on the left side of the separator (1.10 KB, patch)
2013-08-29 22:50 UTC, Yosef Or Boczko
committed Details | Review
ephy-window: Fix the margin of the toolbar (1.21 KB, patch)
2013-08-29 22:50 UTC, Yosef Or Boczko
committed Details | Review

Description Yosef Or Boczko 2013-08-29 22:48:58 UTC
See patches.

This after comment from Allan Day.
Note: need to update gtk+ and gnome-themes-standard
before you check the patches, because defined of the padding
in header-bar is change (in gtk+ and g-t-s).
Comment 1 Yosef Or Boczko 2013-08-29 22:50:17 UTC
Created attachment 253563 [details] [review]
ephy-toolbar: Fix the margin on the left side of the separator
Comment 2 Yosef Or Boczko 2013-08-29 22:50:30 UTC
Created attachment 253564 [details] [review]
ephy-window: Fix the margin of the toolbar
Comment 3 Claudio Saavedra 2013-08-30 16:36:47 UTC
Review of attachment 253563 [details] [review]:

OK.
Comment 4 Claudio Saavedra 2013-08-30 16:37:43 UTC
Review of attachment 253564 [details] [review]:

We really need some API in GTK+ to take care of RTL when defining margins.
Comment 5 Yosef Or Boczko 2013-08-31 17:45:57 UTC
Review of attachment 253563 [details] [review]:

pushed as c22bf5b758a617ece45985b98e33de6dbbdac6d6 - ephy-toolbar: Fix the margin on the left side of the separator
Comment 6 Yosef Or Boczko 2013-08-31 17:46:18 UTC
Review of attachment 253564 [details] [review]:

pushed as 36bf88b3bc6f3670807f10de2d2cefc781b57992 - ephy-window: Fix the margin of the toolbar
Comment 7 Yosef Or Boczko 2013-08-31 17:51:07 UTC
(In reply to comment #4)
> Review of attachment 253564 [details] [review]:
> 
> We really need some API in GTK+ to take care of RTL when defining margins.

You right.
I want to add in the next cycle some functions and properties for this:
gtk_widget_{get,set}_margin_{start,end} and margin-{start,end} propertyies,
and drop gtk_widget_{get,set}_margin_{left,right} and margin-{left,right} propertied.