ephy-toolbar: Fix the margin on the left side of the separator

https://bugzilla.gnome.org/show_bug.cgi?id=707091